no commit message

--- a/Languages/Metaprogramming/Parsing/Specific_language/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/Specific_language/JavaScript/estree.format.txt
@@ -67,7 +67,8 @@ EXPR_STATEMENT                    #Statement with single EXPR.
 
 
 DECLARATION                       #Child of STATEMENT. Parent of VARIABLE_DECLARATION, FUNCTION_DECLARATION, CLASS_DECLARATION,
-                                  #TS_TYPE_ALIAS_DECLARATION, TS_ENUM_DECLARATION, TS_INTERFACE_DECLARATION
+                                  #TS_TYPE_ALIAS_DECLARATION, TS_ENUM_DECLARATION, TS_INTERFACE_DECLARATION,
+                                  #TS_MODULE_DECLARATION
 
 QUAL VAR = VAL, ...               #Child of DECLARATION, type 'VariableDeclaration':
                                   #  - declarations VARIABLE_DECLARATOR_ARR (type 'VariableDeclarator'):
@@ -388,7 +389,8 @@ import * as VAR                   #      IMPORT_NAMESPACE_SPECIFIER, type 'Impor
 import "MDL"                      #
 import {}                         #Those have empty ARR as specifiers
 
-import("MDL")                     #Type 'Import', used in CALLEXPRESSION
+import("MDL")
+import(STR).VAR                   #Just a CALL_EXPRESSION
 
 
                                              /=+===============================+=\
@@ -404,30 +406,30 @@ TYPE                              #Type 'typeAnnotation' (TypeScript|Flow)
 VAR: TYPE
 function (VAR: TYPE): TYPE {}
 ...VAR: TYPE                      #TYPE assertion
-{...}: TYPE                       #On IDENTIFIER|FUNC|REST_ELEMENT|OBJ_PATTERN|ARR_PATTERN|ASSIGNMENT_PATTERN:
+{...}: TYPE                       #On IDENTIFIER|FUNC|REST_ELEMENT|OBJ_PATTERN|ARR_PATTERN|ASSIGNMENT_PATTERN|CLASS_PROPERTY:
 [...]: TYPE                       #  - [typeAnnotation TYPE_ANNOTATION]
 
 
                                              /=+===============================+=\
                                             /  :                               :  \
-                                            )==:          TYPESCRIPT           :==(
+                                            )==:           TSESTREE            :==(
                                             \  :_______________________________:  /
                                              \=+===============================+=/
 
 
-UNOFFICIAL ==>                    #But used by @babel/parser and @typescript-eslint/typescript-estree
-                                  #Below are TYPEs from @babel/parser. Differences with @typescript-eslint/typescript-estree:
-                                  #  - 'TSExpressionWithTypeArguments' -> 'TSClassImplements|TSInterface'
-                                  #  - TS_FUNC_TYPE|TS_CONSTRUCTOR_TYPE|TS_METHOD_SIGNATURE|TS_CALL_SIGNATURE_DECLARATION|TS_CONSTRUCT_SIGNATURE_DECLARATION:
-                                  #     - 'parameters' -> 'params'
-                                  #     - 'typeAnnotation' -> 'returnType'
-                                  #  - TS_TYPE_PARAMETER.name: STR -> IDENTIFIER
+BABEL/PARSER ==>                 ##Some differencess:
+                                 ##  - 'TSClassImplements|TSInterface' -> 'TSExpressionWithTypeArguments'
+                                 ##  - TS_FUNC_TYPE|TS_CONSTRUCTOR_TYPE|TS_METHOD_SIGNATURE|TS_CALL_SIGNATURE_DECLARATION|TS_CONSTRUCT_SIGNATURE_DECLARATION:
+                                 ##     - 'params' -> 'parameters'
+                                 ##     - 'returnType' -> 'typeAnnotation'
+                                 ##  - TS_TYPE_PARAMETER.name: IDENTIFIER -> STR
 
 TYPE                              #TS_TYPE. TypeScript TYPE
-                                  #Parent of TS_TYPE_REFERENCE, TS_TYPE_QUERY, TS_CONDITIONAL_TYPE, TS_TYPE_OPERATOR,
+                                  #Parent of TS_TYPE_REFERENCE, TS_PARENTHESIZED_TYPE, TS_TYPE_QUERY, TS_CONDITIONAL_TYPE, TS_INFER_TYPE, TS_TYPE_OPERATOR,
                                   #TS_INDEXED_ACCESS_TYPE, TS_MAPPED_TYPE, TS_*_KEYWORD, TS_LITERAL_TYPE, TS_OPTIONAL_TYPE,
                                   #TS_TYPE_LITERAL, TS_EXPRESSION_WITH_TYPE_ARGUMENTS, TS_FUNCTION_TYPE, TS_CONSTRUCTOR_TYPE,
-                                  #TS_ARRAY_TYPE, TS_REST_TYPE, TS_TUPLE_TYPE, TS_UNION_TYPE, TS_INTERSECTION_TYPE
+                                  #TS_THIS_TYPE, TS_ARRAY_TYPE, TS_REST_TYPE, TS_TUPLE_TYPE, TS_UNION_TYPE, TS_INTERSECTION_TYPE,
+                                  #TS_TYPE_PREDICATE
 
 TYPE_VAR                          #TS_ENTITY_NAME. Child of IDENTIFIER, for a TS_TYPE.
                                   #TYPE_VAR identifier itself.
@@ -436,10 +438,12 @@ TYPE_VAR                          #Child of TS_TYPE, type 'TSTypeReference':
                                   #  - typeName TS_ENTITY_NAME
                                   #TYPE_VAR reference.
 
-[declare] type TYPE_VAR = TYPE2   #Child of DECLARATION, type 'TSTypeAliasDeclaration':
+(TYPE)                            #Child of TS_TYPE, type 'TSParenthesizedType':
+                                  #  - typeAnnotation TS_TYPE
+
+type TYPE_VAR = TYPE2             #Child of DECLARATION, type 'TSTypeAliasDeclaration':
                                   #  - id IDENTIFIER
                                   #  - typeAnnotation TS_TYPE
-                                  #  - [declare BOOL]
 
 typeof VAR                        #Child of TS_TYPE, type 'TSTypeQuery':
                                   #  - exprName TS_ENTITY_NAME
@@ -449,6 +453,8 @@ TYPE extends TYPE2 ? TYPE3 : TYPE4#Child of TS_TYPE, type 'TSConditionalType':
                                   #  - extendsType TS_TYPE (TYPE2)
                                   #  - trueType TS_TYPE (TYPE3)
                                   #  - falseType TS_TYPE (TYPE4)
+infer TYPE                        #Child of TS_TYPE, type 'TSInferType':
+                                  #  - typeParameter TS_TYPE_PARAMETER
 
 keyof TYPE
 unique symbol                     #Child of TS_TYPE, type 'TSTypeOperator':
@@ -487,8 +493,7 @@ BOOL|NUM|STR|BIGINT               #Child of TS_TYPE, type 'TSLiteralType':
 [TYPE?,...]                       #Child of TS_TYPE, type 'TSOptionalType':
                                   #  - typeAnnotation TS_TYPE
 
-[declare] [const] enum ENUM {}    #Child of DECLARATION, type 'TSEnumDeclaration':
-                                  #  - [declare BOOL]
+[const] enum ENUM {}              #Child of DECLARATION, type 'TSEnumDeclaration':
                                   #  - [const BOOL]
                                   #  - id IDENTIFIER (ENUM)
                                   #  - members TS_ENUM_MEMBER_ARR
@@ -521,14 +526,13 @@ abstract class ...                #On CLASS_DECLARATION:
   abstract VAR|FUNC()             #On CLASS_PROPERTY|CLASS_METHOD|TS_DECLARE_METHOD:
                                   #  - [abstract BOOL]
 
-[declare] interface INTERFACE {}  #Child of DECLARATION, type 'TSInterfaceDeclaration':
-                                  #  - [declare BOOL]
+interface INTERFACE {}            #Child of DECLARATION, type 'TSInterfaceDeclaration':
                                   #  - id IDENTIFIER
                                   #  - [extends TS_EXPRESSION_WITH_TYPE_ARGUMENTS_ARR]
-                                  #  - body TS_INTERFACE_BODY:
+                                  #  - body TS_INTERFACE_BODY (type 'TSInterfaceBody'):
                                   #     - body TS_TYPE_ELEMENT_ARR
 
-implements|extends PARENT         #Child of TS_TYPE, type 'TSExpressionWithTypeArguments'
+implements|extends PARENT         #Child of TS_TYPE, type 'TSClassImplements|TSInterface'
                                   #  - expression EXPR (PARENT)
                                   #On CLASS:
                                   #  - implements TS_EXPRESSION_WITH_TYPE_ARGUMENTS_ARR
@@ -539,22 +543,25 @@ OBJ_TYPE.VAR                      #Child of TS_ENTITY_NAME, type 'TSQualifiedNam
 
 
 ([...]VAR[?]: TYPE,...) => TYPE2  #Child of TS_TYPE, type 'TSFunctionType':
-                                  #  - [parameters IDENTIFIER|REST_ELEMENT_ARR] (parameters, including type assertions)
-                                  #  - [typeAnnotation TS_TYPE_ANNOTATION] (TYPE2)
+                                  #  - [params IDENTIFIER|REST_ELEMENT_ARR] (parameters, including type assertions)
+                                  #  - [returnType TS_TYPE_ANNOTATION]
 new (...) => TYPE2                #Child of TS_TYPE, type 'TSConstructorType':
-                                  #  - [parameters IDENTIFIER|REST_ELEMENT_ARR] (parameters, including type assertions)
-                                  #  - [typeAnnotation TS_TYPE_ANNOTATION] (TYPE2)
+                                  #  - [params IDENTIFIER|REST_ELEMENT_ARR] (parameters, including type assertions)
+                                  #  - [returnType TS_TYPE_ANNOTATION]
 { FUNC(...)[: TYPE2] }            #Type 'TSMethodSignature':
                                   #  - key EXPR
                                   #  - [computed BOOL] (when key is [STR])
-                                  #  - [parameters IDENTIFIER|REST_ELEMENT_ARR]
-                                  #  - [typeAnnotation TS_TYPE_ANNOTATION] (TYPE2)
+                                  #  - [params IDENTIFIER|REST_ELEMENT_ARR]
+                                  #  - [returnType TS_TYPE_ANNOTATION]
 { (...)[: TYPE2], ... }           #Type 'TSCallSignatureDeclaration':
-                                  #  - [parameters IDENTIFIER|REST_ELEMENT_ARR]
-                                  #  - [typeAnnotation TS_TYPE_ANNOTATION] (TYPE2)
+                                  #  - [params IDENTIFIER|REST_ELEMENT_ARR]
+                                  #  - [returnType TS_TYPE_ANNOTATION]
 { new (...)[: TYPE2] }            #Type 'TSConstructSignatureDeclaration':
-                                  #  - [parameters IDENTIFIER|REST_ELEMENT_ARR]
-                                  #  - [typeAnnotation TS_TYPE_ANNOTATION] (TYPE2)
+                                  #  - [params IDENTIFIER|REST_ELEMENT_ARR]
+                                  #  - [returnType TS_TYPE_ANNOTATION]
+
+this                              #Child of TS_TYPE, type 'TSThisType'
+                                  #When used as return value type
 
 TYPE[]                            #Child of TS_TYPE, type 'TSArrayType':
                                   #  - elementType TS_TYPE
@@ -574,27 +581,30 @@ TYPE & TYPE2                      #Child of TS_TYPE, type 'TSIntersectionType':
 
 type TYPE<T...> = ...
 class CLASS<T...> {}
-interface INTERFACE<T,...> {}     #Type 'TSTypeParameterDeclaration':
-[new] <T...>(...) => ...          #  - params TS_TYPE_PARAMETER_ARR
-{ FUNC<T...>(...): ... }          #On FUNCTION_DECLARATION|ARROW_FUNCTION_EXPRESSION|CLASS_DECLARATION|OBJECT_METHOD
-{ [new] <T...>(...): ... }        #TS_TYPE_ALIAS_DECLARATION|TS_INTERFACE_DECLARATION|
-function <T,...>(...) {...}       #TS_FUNCTION_TYPE|TS_CONSTRUCTOR_TYPE|TS_DECLARE_FUNCTION|TS_DECLARE_METHOD|TS_METHOD_SIGNATURE|
-<T,...>(...) => ...               #TS_CALL_SIGNATURE_DECLARATION|TS_CONSTRUCT_SIGNATURE_DECLARATION:
-{ FUNC<T,...>(...) {} }           #  - [typeParameters TS_TYPE_PARAMETER_DECLARATION_ARR] (<...>)
+interface INTERFACE<T,...> {}
+[new] <T...>(...) => ...          #Type 'TSTypeParameterDeclaration':
+{ FUNC<T...>(...): ... }          #  - params TS_TYPE_PARAMETER_ARR
+{ [new] <T...>(...): ... }        #On FUNCTION_DECLARATION|FUNCTION_EXPRESSION|ARROW_FUNCTION_EXPRESSION|CLASS_DECLARATION|CLASS_EXPRESSION|CLASS_METHOD|OBJECT_METHOD
+function <T,...>(...) {...}       #TS_TYPE_ALIAS_DECLARATION|TS_INTERFACE_DECLARATION|
+<T,...>(...) => ...               #TS_FUNCTION_TYPE|TS_CONSTRUCTOR_TYPE|TS_DECLARE_FUNCTION|TS_DECLARE_METHOD|TS_METHOD_SIGNATURE|
+{ FUNC<T,...>(...) {} }           #TS_CALL_SIGNATURE_DECLARATION|TS_CONSTRUCT_SIGNATURE_DECLARATION:
+declare function <T,...>(...)     #  - [typeParameters TS_TYPE_PARAMETER_DECLARATION_ARR] (<...>)
  T [extends TYPE3][ = TYPE4]      #Type 'TSTypeParameter':
- T in TYPE3                       #  - [name STR]
+ T in TYPE3                       #  - [name IDENTIFIER]
                                   #  - [constraint TYPE3]
                                   #  - [default TYPE4]
 TYPE<TYPE2_VAR,...>               #Type 'TSTypeParameterInstantiation':
                                   #  - params TS_TYPE_ARR
                                   #On CALL_EXPRESSION|NEW_EXPRESSION|TS_TYPE_REFERENCE|TS_EXPRESSION_WITH_TYPE_ARGUMENT:
                                   #  - [typeParameters TS_TYPE_PARAMETERS_INSTANTIATION]
+extends PARENT<...>               #On CLASS_DECLARATION|CLASS_EXPRESSION:
+                                  #  - [superTypeParameters TS_TYPE_PARAMETERS_INSTANTIATION]
 
 <TYPE>VAL                         #Child of EXPR, type 'TSTypeAssertion':
-                                  #  - typeAnnotation TS_TYPE
+<const>VAL                        #  - typeAnnotation TS_TYPE
                                   #  - expression EXPR
 VAL as TYPE                       #Child of EXPR, type 'TSAsExpression':
-                                  #  - typeAnnotation TS_TYPE
+VAL as const                      #  - typeAnnotation TS_TYPE
                                   #  - expression EXPR
 
 ...: TYPE                         #Child of TYPE_ANNOTATION, type 'TSTypeAnnotation'
@@ -602,5 +612,50 @@ VAL as TYPE                       #Child of EXPR, type 'TSAsExpression':
                                   #TypeScript TYPE assertion
 
 function(...): TYPE2 {}
-(...): TYPE2 => ...               #On FUNCTION_DECLARATION|ARROW_FUNCTION_EXPRESSION|OBJECT_METHOD:
-{ FUNC(...): TYPE2 {} }           #  - [returnType TYPE_ANNOTATION]
+declare function FUNC(): TYPE2
+(...): TYPE2 => ...
+{ FUNC(...): TYPE2 {} }           #On FUNCTION_DECLARATION|FUNCTION_EXPRESSION|METHOD_DEFINITION|TS_DECLARE_FUNCTION|ARROW_FUNCTION_EXPRESSION|OBJECT_METHOD:
+class { FUNC(...): TYPE2 }        #  - [returnType TYPE_ANNOTATION]
+
+VAL!                              #Child of EXPR, type 'TSNonNullExpression':
+                                  #  - expression EXPR
+
+var|let VAR!: TYPE                #On VARIABLE_DECLARATOR|CLASS_PROPERTY:
+class ... { VAR!: TYPE; ... }     #  - [definite BOOL]
+
+VAR is TYPE                       #Child of TS_TYPE, type 'TSTypePredicate':
+                                  #  - parameterName IDENTIFIER|TS_THIS_TYPE
+                                  #  - typeAnnotation TS_TYPE_ANNOTATION
+
+namespace NAMESPACE {}            #Child of DECLARATION, type 'TSModuleDeclaration':
+declare module "MODULE" {}        #  - id IDENTIFIER|LITERAL
+declare module "MODULE"           #  - body TS_MODULE_BLOCK (NAMESPACE) or TS_MODULE_DECLARATION (module|global):
+declare global {}                 #  - [global BOOL]
+                                  #TS_MODULE_BLOCK:
+                                  #  - body STATEMENT_ARR
+
+declare QUAL VAR ...
+declare function FUNC() {}
+declare enum ...
+declare class ...
+declare interface ...
+declare namespace ...
+declare type ...                  #On VARIABLE_DECLARATION|FUNCTION_DECLARATION|CLASS_DECLARATION|
+declare module ...                #TS_TYPE_ALIAS_DECLARATION|TS_ENUM_DECLARATION|TS_INTERFACE_DECLARATION|TS_MODULE_DECLARATION:
+declare global ...                #  - [declare BOOL]
+
+declare [async] function FUNC()   #Child of DECLARATION, type 'TSDeclareFunction'. Like FUNCTION_DECLARATION except no body
+class ... { FUNC() }              #Type 'TSDeclareMethod'. Like METHOD_DEFINITION except no body
+
+export = VAL                      #Child of STATEMENT, type 'TSExportAssignment':
+                                  #  - expression EXPR
+[export] import VAR = NAMESPACE   #Child of STATEMENT, type 'TSImportEqualsDeclaration':
+[export] import VAR = require(STR)#  - id IDENTIFIER
+                                  #  - moduleReference TS_ENTITY_NAME (NAMESPACE) or TS_EXTERNAL_MODULE_REFERENCE (require(STR))
+                                  #  - [isExport BOOL]
+require(STR)                      #Type 'TSExternalModuleReference':
+                                  #  - expression EXPR
+                                  #Only in import VAR = require(STR)
+
+export as namespace NAME          #Child of STATEMENT, type 'TSNamespaceExportDeclaration':
+                                  #  - id IDENTIFIER
