--- a/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
@@ -968,6 +968,7 @@ ES MODULES ==>                    #Must be used for sources.
                                   #  - 'PATH' must use ESM
                                   #  - 'MODULE' can use any module system
                                   #Can also import|export TYPEs and type|enum|interface|namespace
+                                  #Can "export import VAR = ..."
                                   #Can use dynamic import()
                                   #import.meta is empty OBJ
 
@@ -991,7 +992,7 @@ import(STR).VAR                   #Same as import {VAR} from 'STR' except:
 
 
 export = VAL|TYPE                 #exporting|importing default `module.exports` of CommonJS|AMD|UMD
-import VAL = require(STR)         #  - as opposed to `module.exports.default` / `export default`
+import VAR = require(STR)         #  - as opposed to `module.exports.default` / `export default`
                                   #Require --module commonjs|amd|umd
                                   #To export default `module.exports` but also export TYPEs:
                                   #  - should define TYPEs in a NAMESPACE
