no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -1824,6 +1824,7 @@ PROMISE.catch(...)                            -|#Same as PROMISE.then(null, ...)
 PROMISE.finally(FUNC())                    10*-|#Like PROMISE.then(FUNC(), FUNC())
                                            10*-|#Difference: FUNC() does not change PROMISE value, whatever it returns.
                                            10*-|#But it changes PROMISE value if it throws or returns rejected PROMISE2.
+                                               ##Ponyfill: seee p-finally
 
 Promise.all(VAL|PROMISABLE_ITERABLE)          -|#Returns PROMISE:
                                               -|#  - if all PROMISABLE resolved -> resolved with VAL2_ARR
