--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -377,7 +377,7 @@ PLUGIN.processors.".EXT" OBJ      #OBJ:
                                              \=+===============================+=/
 
 
-STANDARD ==>                     ##Node module "standard" from feross (13.1.0)
+STANDARD ==>                     ##Node module "standard" from feross (14.0.0-0)
                                  ##Is a wrapper around ESLint with a different default config (eslint-config-standard)
 
 SEMISTANDARD ==>                 ##Node module (11.0.0)
