no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -2312,11 +2312,15 @@ spawn(STR[, STR2_ARR][, OPTS])->CHILDPROCESS    #Creates and runs a CHILDPROCESS
                                                 #     - how parent can access child's file descriptors
                                                 #     - at least first three ones, stdin|out|err, but can continue with fd 3, etc.
                                                 #     - among:
-                                                #        - "pipe": enable CHILDPROCESS.stdio[FD_INT]|stdin|out|err
+                                                #        - "pipe":
+                                                #           - anonymous pipe
+                                                #           - write-only (parent to child) if stdin, read-only (child to parent) otherwise
+                                                #           - enable CHILDPROCESS.stdio[FD_INT]|stdin|out|err
                                                 #        - "ipc":
+                                                #           - bidirectional anonymous pipe
                                                 #           - enable CHILDPROCESS.send()
                                                 #           - can only do it for one file descriptor.
-                                                #           - file descriptor will be available in child's ENVVAR NODE_CHANNEL_NUM
+                                                #           - file descriptor will be available in child's ENVVAR NODE_CHANNEL_FD
                                                 #        - "ignore": with nothing
                                                 #        - STREAM: pipe file descriptor to it (like NUM> FILE)
                                                 #        - FD_INT: same with parent file descriptor (like NUM&>FD_INT) (not on Windows)
