no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -1809,7 +1809,7 @@ WRENCH.copyDirSync[Recursive]                  ##OBJ:
                                                ##  - filter REGEXP|FUNC(STR)->BOOL: exclude files to copy
                                                ##  - whitelist BOOL: if true, filter works
                                                ##  - include|exclude REGEXP|FUNC(STR)->BOOL
-rename(PATH, PATH2, FUNC(ERROR))                #
+rename(PATH, PATH2, FUNC(ERROR))                #Cannot be done between partitions on Linux (see move-file doc)
 FS-EXTRA.move(FILE|DIR, FILE|DIR2[, OBJ],
 FUNC(ERROR))                                   ##Can use OBJ.clobber true to overwrite.
 GULP-RENAME(VAL)                               ##Rename filenames. VAL can be:
