no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -2411,7 +2411,7 @@ CHILDPROCESS.disconnect()                       #Flush all communication, then b
                                                 #Do it before exiting.
 CHILDPROCESS.connected                          #
 CHILDPROCESS.on("disconnect", FUNC())           #
-CHILDPROCESS.on("error", FUNC(ERROR))           #When CHILDPROCESS could not send(), be kill() or be spawn()
+CHILDPROCESS.on("error", FUNC(ERROR))           #When CHILDPROCESS could not spawn() or send|kill|disconnect()
                                                 #The exit event might be fired or not after error event.
 CHILDPROCESS.on("exit|close",FUNC(UINT,SIGNAME))#UINT is the exit code, SIGNAME the terminating signal.
                                                 #Only one of them is always defined, the other is null.
