no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -15,7 +15,7 @@
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #12.8.1 (current), 10.16.3 (active LTS), 8.16.1 (active LTS)
+VERSION ==>                                     #12.9.0 (current), 10.16.3 (active LTS), 8.16.1 (active LTS)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -673,6 +673,7 @@ ISTREAM.readableFlowing                         #Can be:
                                                 #  - null: when all data has been consumed, or stream has not started been read yet
                                                 #  - true: when stream is being read, i.e. after on('data')
                                                 #  - false: when stream is being paused, i.e. after pause()
+ISTREAM.readableEnded                        12*#BOOL. Whether 'end' event was fired.
 ISTREAM.pipe(OSTREAM[, { end: BOOL }])->OSTREAM #Same as ISTREAM.on("data", sval => OSTREAM.write(SVAL))
                                                 #If BOOL true (def), call OSTREAM.end() on ISTREAM.on('end|error') (except on stdout|stderr)
 ISTREAM.unpipe([OSTREAM])                       #Stops pipe() (def: all)
@@ -709,6 +710,7 @@ OSTREAM.[un]cork()                              #cork() forces buffering to disk
                                                 #To do when writing a lot of small I/O, to make them all flush at once.
 OSTREAM.on("close", FUNC())                     #Like ISTREAM
 OSTREAM.on("finish", FUNC())                    #Fired when end() done
+OSTREAM.writableEnded                        12*#BOOL. Whether end() was called
 OSTREAM.writableFinished                     12*#BOOL. Whether 'finish' event was fired.
 OSTREAM.on("[un]pipe", FUNC(ISTREAM))           #Fired by ISTREAM.[un]pipe()
 OSTREAM.on("error", FUNC(ERROR))                #
@@ -874,8 +876,8 @@ INTERFACE.on("SIGINT|SIGTSTP|SIGCONT", FUNC())  #
 
 clearLine(OSTREAM, NUM[, FUNC()])->BOOL         #Can be 0 (entire line, \e2K) or -1|1 (to the left|right of cursor, \e0K, \e1K)
                                                 #FUNC|BOOL are from the underlying OSTREAM.write()
-cursorTo|moveCursor(OSTREAM, NUM, NUM2[,FUNC()])
- ->BOOL                                         #Move cursor absolutely|relatively (\eNUMA, \eNUMB, \eNUM2C, \eNUM2D)
+cursorTo(OSTREAM, NUM, NUM2[,FUNC()])->BOOL     #Move cursor absolutely (\eNUMA, \eNUMB)
+moveCursor(OSTREAM, NUM[, NUM2][,FUNC()])->BOOL #Move cursor relatively (\eNUM2C, \eNUM2D)
 clearScreenDown(OSTREAM[, FUNC()])->BOOL        #Clear all following lines (\e0J). To clear screen, combine with cursorTo(OSTREAM, 0, 0)
 
 emitKeypressEvents(OSTREAM[, INTERFACE])        #Enable OSTREAM.on('keypress')
@@ -1269,6 +1271,7 @@ connect([PORT_NUM[,'HOST']]OBJ[,FUNC(TLSSOCKT)])#Like TCP.connect(), but for TLS
                                                 #  - checkServerIdentity('HOST', CERT_BUFFER): if throw error, refuse connection
                                                 #  - minDHSize NUM (def: 1024)
                                                 #  - lookup FUNC: DNS lookup, def: DNS.lookup()
+                                             12*#  - allowHalfOpen: like NET.createServer()
                                                 #FUNC is 'secureConnect' event handler
                                                 #Returns a TLSSOCKET.
 
@@ -1414,6 +1417,7 @@ RES                                             #OSTREAM, writing the body:
 RES.on("close", FUNC())                         #Fired if closed before end() was called
 RES.headersSent                                 #True if headers are sent
 RES.finished                                    #True if all sent (i.e. after end())
+RES.writableEnded                            12*#Same
 RES.writableFinished                         12*#True if all sent + flushed
 RES.statusCode|Message                          #If statusMessage not set, use STATUS_CODES[statusCode]
 RES.setHeader('VAR', 'VAL'[_ARR])               #'VAL'_ARR: same as doing setHeader() several times.
@@ -1919,8 +1923,10 @@ close(FD_INT, FUNC(ERROR))                      #
 write(FD_INT, TDBUFFER, INT, INT2, [ INT3,]     #Write INT2 bytes from TDBUFFER at its position INT to file FD_INT at its position INT3 (def: current).
 FUNC(ERROR, INT4, TDBUFFER))                    #INT4 is the number of bytes written.
                                                 #INT|INT2 are optional
-write(FD_INT, STR[, INT3,                       #Similar.
-['ENCODING', ]] FUNC(ERROR, INT4, STR))         #INT3 is optional
+write(FD_INT, STR[, INT3,
+['ENCODING', ]] FUNC(ERROR, INT4, STR))         #Same but with STR
+writev(FD_INT, ARRAYBUFFERVIEW_ARR[, INT3],
+ FUNC(ERROR, INT4, ARRAYBUFFERVIEW_ARR))     12*#Same but with ARRAYBUFFERVIEW_ARR
 read(FD_INT, TDBUFFER, INT, INT2,
 INT3, FUNC(ERROR, INT4, BUFFER))                #
 f[data]sync(FD_INT, FUNC(ERROR))                #Flushes to disk
@@ -2773,6 +2779,7 @@ ECDH.convertKey(STDBUFFER, 'ALGO'[, ENCODING]
 public|privateEncrypt|Decrypt                   #Encrypts/decrypts asym. (RSA) TDBUFFER, with private|public key STR|KEY|OBJ:
  (STR|KEY|OBJ, TDBUFFER)                        #  - key, format, type, passphrase: like createPrivate|PublicKey()
                                                 #  - padding: CRYPTO.constants.RSA_NO|PKCS1[_OAEP]_PADDING
+                                             12*#  - oaepHash STR (def: 'sha1'): algo for OAEP padding
 
 generateKeyPair[Sync]('TYPE', OPTS           10*#Create asym key pair, where SBUFFER is publicKey and SBUFFER privateKey
  [, FUNC(ERROR, SBUFFER, SBUFFER2)])         10*#'TYPE' is 'rsa', 'dsa', 'ec', 'ed25519', 'ed448', 'x25519', 'x448'
@@ -3166,6 +3173,7 @@ process.report.getReport([ERROR])->OBJ       11*#Get debugging information.
                                              11*#Returns OBJ:
                                              12*#(Node 11 returns 'JSON' instead)
                                              11*#  - header:
+                                             12*#     - reportVersion 1
                                              11*#     - trigger:
                                              11*#        - 'GetReport': manual call to getReport()
                                              11*#        - 'OnUncaughtException': --diagnostic-report-uncaught-exception
