--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -11,7 +11,7 @@ VERSION ==>                                     #Standard is called ECMAScript. 
 SUPPORT ==>                                     #Use this notation for new features:
                                                ~#  - stage 3 proposal
                                             NUM*#  - introduced by Node NUM.*.* (starting at Node 9)
-                                               *#  - not Node 12.8.1
+                                               *#  - not Node 12.9.0
                                                -#  - not all supported web browsers
                                                |#  - a core Babel plugin exists (only documented if lacks Node/browser support)
                                               ||#  - a non-core Babel plugin exists
@@ -1268,10 +1268,10 @@ new Intl.NumberFormat([LOCALEOPTS])         -|||#Number locale formatting.
                                           *-|||~#       gallon[-imperial]|[milli|centi|deci|hecto|mega]liter|pint[-metric]|quart|tablespoon|teaspoon
                                           *-|||~#  - unitDisplay 'narrow', 'short' or 'long'
                                             -|||#Relevant LOCALE_ARGS: nu
-NUMBERFORMAT.format(NUM)->STR               -|||#
-NUM.toLocaleString([LOCALEOPTS])->STR       -|||#
-NUMBERFORMAT.formatToParts(NUM)->OBJ_ARR    -|||#OBJ_ARR:
-                                            -|||#  - type STR:
+NUMBERFORMAT.format(NUM|BIGINT)->STR        -|||#
+NUM|BIGINT.toLocaleString([LOCALEOPTS])->STR-|||#
+NUMBERFORMAT.formatToParts(NUM|BIGINT)      -|||#OBJ_ARR:
+ ->OBJ_ARR                                  -|||#  - type STR:
                                             -|||#     - 'integer|fraction': integer|fraction part of the number
                                             -|||#     - 'decimal': decimal separator
                                             -|||#     - 'group': thousands separator
@@ -1292,8 +1292,8 @@ new Intl.DateTimeFormat([LOCALEOPTS])       -|||#Date|Time|Date+Time locale form
                                             -|||#  - month 'numeric|2-digit|narrow|short|long' (no def)
                                             -|||#  - year|day|hour|minute|second 'numeric|2-digit' (no def)
                                             -|||#  - timeZoneName 'short|long' (no def)
-                                          *-|||~#  - timeStyle 'short' (D/M/YY), 'medium' (MMM D, YYYY), 'long' (MMMM D, Y), 'full' (Tuesday, MMMM D, Y)
-                                          *-|||~#  - dateStyle 'short' (HH:MM), 'medium' (HH:MM:SS), 'long' (HH:MM:SS Z), 'full' (HH:MM:SS ZZZZ)
+                                        12*-|||~#  - timeStyle 'short' (HH:MM), 'medium' (HH:MM:SS), 'long' (HH:MM:SS Z), 'full' (HH:MM:SS ZZZZ)
+                                        12*-|||~#  - dateStyle 'short' (D/M/YY), 'medium' (MMM D, YYYY), 'long' (MMMM D, Y), 'full' (Tuesday, MMMM D, Y)
                                             -|||#Relevant LOCALE_ARGS: nu, ca
 DATETIMEFORMAT.format(DATE)->STR            -|||#
 DATE.toLocale[Date|Time]String([LOCALOPTS])
@@ -1302,9 +1302,9 @@ DATETIMEFORMAT.formatToParts(DATE)          -|||Same but returned as OBJ_ARR:
                                             -|||#  - type 'era|year|month|weekday|day|hour|minute|second|timeZoneName|separator'
                                             -|||#  - value STR
 DATETIMEFORMAT.formatRange
- (DATE, DATE2)->STR                       *-|||~#Like format() but for range between two DATEs ('1/10/07, 10:00 AM – 1/20/07, 10:00 AM')
+ (DATE, DATE2)->STR                     12*-|||~#Like format() but for range between two DATEs ('1/10/07, 10:00 AM – 1/20/07, 10:00 AM')
 DATETIMEFORMAT.formatRangeToParts
- (DATE, DATE2)->STR                       *-|||~#Like formatToParts() but for range. OBJ has extra member source 'startRange|endRange|shared'
+ (DATE, DATE2)->STR                     12*-|||~#Like formatToParts() but for range. OBJ has extra member source 'startRange|endRange|shared'
 
 new Intl.RelativeTimeFormat([LOCALEOPTS]) *-|||~#Date|Time|Date+Time locale formatting, for relative time ("time ago")
                                           *-|||~#OPTS:
@@ -1515,6 +1515,7 @@ ARRBUFFER.byteLength                            #Readonly.
                                                 #This is different from STR.length which returns number of characters
 ARRBUFFER.slice(...)                            #Like ARR.slice(...)
 
+ARRAYBUFFERVIEW                                 #DATAVIEW|TYPED_ARR
 
 new DataView(ARRBUFFER[, UINT[, UINT2]])        #UINT is offset (def: 0), UINT2 length (def: ARRBUFFER.byteLength)
 DATAVIEW.buffer|byteLength|byteOffset           #Readonly
@@ -1843,12 +1844,11 @@ Promise.all(VAL|PROMISABLE_ITERABLE)          -|#Returns PROMISE:
                                               -|#VAL is converted to PROMISE2 using Promise.resolve(VAL)
 Promise.race(VAL|PROMISABLE_ITERABLE)         -|#Same but instead:
                                               -|#  - if any PROMISABLE resolved|rejected with VAL2 -> resolved|rejected with VAL2
-Promise.allSettled(VAL|PROMISABLE_ITERABLE)  *-|#Same but instead:
-                                             *-|#  - after all PROMISABLE resolved|rejected with VAL2 -> resolved with OBJ_ARR:
-                                             *-|#     - status 'resolved|rejected'
-                                             *-|#     - value VAL2 (if resolved)
-                                             *-|#     - reason VAL2 (if rejected)
-
+Promise.allSettled(VAL|PROMISABLE_ITERABL) 12*-|#Same but instead:
+                                           12*-|#  - after all PROMISABLE resolved|rejected with VAL2 -> resolved with OBJ_ARR:
+                                           12*-|#     - status 'fulfilled|rejected'
+                                           12*-|#     - value VAL2 (if resolved)
+                                           12*-|#     - reason VAL2 (if rejected)
 
 async function [*] [FUNC](...) {...}          -|#Returns FUNC2(...)->PROMISE, where FUNC can:
 [class ...] { async [*] FUNC() {...} ... }    -|#  - return VAL -> resolve PROMISE with VAL
