no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -332,13 +332,13 @@ debugger                          #Child of STATEMENT, type 'DebuggerStatement'
 
 STR|BOOL|NUM|BIGINT|null|REGEXP  b#Child of EXPR, type 'Literal':
                                  b#  - value STR|BOOL|NUM|null|REGEXP
-                               seb#    or BIGINT
+                                sb#    or BIGINT
                                  b#  (REGEXP only)
                                  b#  - regex:
                                  b#     - pattern STR
                                  b#     - flags STR
-                              sebl#  (BIGINT only)
-                              sebl#  - bigint STR (without 'n')
+                               sbl#  (BIGINT only)
+                               sbl#  - bigint STR (without 'n')
                               (b)##Type 'String|Boolean|Numeric|Null|RegExpLiteral':
                               (b)##  - value STR|BOOL|NUM|null|REGEXP|BIGINT
                               (b)##  (not BOOL|null)
@@ -526,6 +526,6 @@ import * as VAR                   #Child of MODULE_SPECIFIER, type 'ImportNamesp
 import "MDL"                      #
 import {}                         #Those have empty ARR as specifiers
 
-import("MDL")                setbl#Child of EXPR, type 'ImportExpression':
-                             setbl#  - source EXPR
+import("MDL")                 stbl#Child of EXPR, type 'ImportExpression':
+                              stbl#  - source EXPR
                             (tbl)##Treated as a CALL_EXPRESSION
