no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -9,7 +9,7 @@ ALTERNATIVES ==>                  #  - eslint (prefered): more rules, more confi
                                   #  - jscs: not maintained, merged with eslint
                                   #  - jshint
 
-VERSION ==>                       #6.1.0
+VERSION ==>                       #6.2.0
                                   #JavaScript linter, using Espree parser.
 
 TYPE                              #ESTree type
@@ -503,6 +503,7 @@ eslint-comments/no-use [OBJ]     ##Forbids all ESLint comments
 eslint-comments/no-unused-disable##No /* eslint-disable */ if no rule is broken
 eslint --report-unused-disable
  -directives                      #No /* eslint-disable */ if no rule is broken
+eslint --no-inline-config         #No /* eslint-disable */
 
 
                                              /=+===============================+=\
@@ -754,6 +755,8 @@ rest-spread-spacing [STR]         #Space between ... and VAL in ...VAL
 func-call-spacing [STR] [OBJ]     #Space in-between FUNC and (...) in "FUNC(...)"
                                   #STR: 'always', 'never' (def)
                                   #OBJ: allowNewlines BOOL (def: false)
+function-call-argument-newline    #Newlines before each argument
+ [STR]                            #STR: 'always' (def), 'never', 'consistent'
 space-before-function-paren       #Space before (...) in function [NAME](...)
   [STR|OBJ]                       #STR: 'always' (def) or 'never'
                                   #OBJ: anonymous|named|asyncArrow STR:
@@ -839,6 +842,7 @@ no-mixed-operators [OBJ]          #Must add extra (even useless) parenthesis aro
                                   #        == != === !== > >= < <=
                                   #        && ||
                                   #        in instanceof
+                                  #        ?:
                                   #  - allowSamePrecedence BOOL: if true (def), ignore if two operators have same precedence
 
 wrap-iife [STR] [OBJ]             #IIFE parenthesis wrapping.
