no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -165,6 +165,13 @@ OBJ?.VAR                  seatmbl|#On MEMBER_EXPRESSION:
 OBJ?.[VAL]                seatmbl|#  - optional BOOL
                              (bl)##Child of MEMBER_EXPRESSION, type 'OptionalMemberExpression'
                              (bl)##  - optional BOOL
+                              (m)##Child of EXPR, type 'OptionalExpression'
+                              (m)##  - object EXPR
+                              (m)##  - chain OPTIONAL_CHAIN (type 'OptionalChain'):
+                              (m)##     - property EXPR
+                              (m)##     - base OPTIONAL_CHAIN (when recursive)
+                              (m)##     - [computed BOOL] (unless FUNC?.())
+                              (m)##     - [arguments] (if FUNC?.())
 
 {VAR, ...}                        #Child of PATTERN, type 'ObjectPattern' (deconstruction):
 {...OBJ, ...}                     #  - properties ARR of either:
@@ -223,6 +230,7 @@ FUNC(...)                         #Child of EXPR, type 'CallExpression':
                           seatmbl|#  - optional BOOL (FUNC?.(...))
                              (bl)##Child of CALL_EXPRESSION, type 'OptionalCallExpression'
                              (bl)##  - optional BOOL (FUNC?.(...))
+                              (m)##Type 'OptionalExpression' (see above)
 new FUNC(...)                     #Child of EXPR, type 'NewExpression':
                                   #  - callee EXPR (FUNC)
                                   #  - arguments EXPR|SPREAD_ELEMENT_ARR
@@ -470,7 +478,7 @@ class [CLASS] ... {}              #Child of CLASS+EXPR, type 'ClassExpression'
 new.target                        #Child of EXPR, type 'MetaProperty':
                                   #  - meta IDENTIFIER
                                   #  - property IDENTIFIER
-import.meta                    sem#Same
+import.meta                     se#Same
 function.sent                (bl)*#Same
 
 this                              #Child of EXPR, type 'ThisExpression'
