no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -1453,6 +1453,7 @@ request(['URI'|URI][, OBJ][, FUNC(REQ)])        #Sends a HTTP request.
  ->CLIENTREQ                                    #Can use URI
                                              10*#Can use both first arguments, instead of OBJ.url
                                                 #OBJ:
+                                                #  - url 'URL'
                                                 #  - protocol STR (def: 'http:')
                                                 #  - host[name] STR (def: "localhost")
                                                 #     - prefer hostname
