no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -1626,6 +1626,9 @@ function* [FUNC](){...}                       -|#Generator.
                                               -|#Can also use yield* ITERABLE:
                                               -|#  - yield NEXT several times
                                               -|#  - return value is final yield's return value
+                                              -|#ITERABLETOR[Symbol.iterable]() returns ITERABLETOR itself, i.e. must call
+                                              -|#FUNC() again to create new ITERATOR
+                                              -|#  - as oppose to other ITERABLEs (ARR, MAP, etc.) which create new ITERATOR each time
 new GeneratorFunction(...)                    -|#Like new Function(...) but for function*(){}
                                               -|#GeneratorFunction not available globally, but with:
                                               -|#  Object.getPrototypeOf(function*(){}).constructor
