--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -1591,6 +1591,7 @@ handle-callback-err [STR]         #Must handle ERROR in Node.js callbacks FUNC(E
                                   #STR is ERROR name (def: 'err'), which can be 'NAME' or '^REGEXP' (must start with ^)
 callback-return [STR_ARR]         #In Node.js callbacks FUNC(ERROR[, VAL]), must call return after firing FUNC()
                                   #'VARR'_ARR are possible FUNC names (def: 'callback', 'cb', 'next')
+node/no-callback-literal         ##FUNC called 'cb|callback' first argument must be undefined|null|ERROR
 
 prefer-promise-reject-errors [OBJ]#Must pass ERROR to Promise.reject()
                                   #OBJ: allowEmptyReject BOOL (def: false): also allow undefined
@@ -1666,7 +1667,7 @@ import/*                         ##Node module "eslint-plugin-import
                                  ##        - jspm, babel, meteor, react-native, typescript
                                  ##  - import/cache OBJ: lifetime NUM (in secs, def: 30)
 
-node/*                           ##Module "eslint-plugin-node" (9.1.0)
+node/*                           ##Module "eslint-plugin-node" (9.2.0)
                                  ##Uses the following CONF.settings, which are defaults to RULE_CONF:
                                  ##  - allowModules 'MDL'_ARR: ignores those modules
                                  ##  - tryExtensions '.EXT'_ARR (def: '.js', '.json', '.node'): modules file extensions
