no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -9,7 +9,7 @@ ALTERNATIVES ==>                  #  - eslint (prefered): more rules, more confi
                                   #  - jscs: not maintained, merged with eslint
                                   #  - jshint
 
-VERSION ==>                       #6.2.2
+VERSION ==>                       #6.3.0
                                   #JavaScript linter, using Espree parser.
 
 TYPE                              #ESTree type
@@ -99,7 +99,8 @@ eslint --rule 'RULE: RULECONF'    #Exit code will be 1 on "error"
 /* eslint-disable-line RULE,... */#End-of-line comment
 /* eslint-disable-next-line RULE*/#
 
-eslint --no-inline-config         #Prevent comments from changing config
+eslint --no-inline-config
+CONF.noInlineConfig               #BOOL. Prevent comments from changing config
 
 CONF.settings OBJ                 #Custom OBJ passed to every RULE
 
@@ -502,7 +503,8 @@ eslint-comments/no-use [OBJ]     ##Forbids all ESLint comments
                                  ##'eslint-env', 'exported', 'global[s]'
 eslint-comments/no-unused-disable##No /* eslint-disable */ if no rule is broken
 eslint --report-unused-disable
- -directives                      #No /* eslint-disable */ if no rule is broken
+ -directives
+CONF.reportUnusedDisableDirectives#BOOL. No /* eslint-disable */ if no rule is broken
 eslint --no-inline-config         #No /* eslint-disable */
 
 
@@ -830,7 +832,8 @@ no-extra-parens [STR] [OBJ]       #Avoid unnecessary parentheses
                                   #  - nestedBinaryExpressions BOOL (ignore around chained binary operators)
                                   #  - ignoreJSX "none", "all", "multi-line", "single-line"
                                   #    (ignore around JSX, providing it is multi-line or single-line)
-                                  #  - enforceForArrowConditionals BOOL (def: false) (ignore around (...) => ?:)
+                                  #  - enforceForArrowConditionals BOOL (ignore around (...) => ?:)
+                                  #  - enforceForSequenceExpressions BOOL (ignore around ..., ...)
 no-mixed-operators [OBJ]          #Must add extra (even useless) parenthesis around operators to clarity order,
                                   #when using several operators.
                                   #OBJ:
